--- a/package.json
+++ b/package.json
@@ -19,37 +19,37 @@
     "test:report": "playwright show-report"
   },
   "dependencies": {
-    "antd": "^4.0.1",
-    "feather-icons-react": "^0.4.1",
+    "antd": "^4.24.0",
+    "feather-icons-react": "^0.6.2",
     "font-awesome": "^4.7.0",
-    "gatsby": "^2.29.2",
-    "gatsby-image": "^2.3.1",
+    "gatsby": "^4.25.0",
     "gatsby-plugin-antd": "^2.2.0",
-    "gatsby-plugin-google-analytics": "^2.2.2",
+    "gatsby-plugin-google-analytics": "^4.25.0",
     "gatsby-plugin-i18n": "^1.0.1",
-    "gatsby-plugin-less": "^3.0.19",
-    "gatsby-plugin-manifest": "^2.9.1",
-    "gatsby-plugin-nprogress": "^2.2.1",
-    "gatsby-plugin-offline": "^3.1.2",
-    "gatsby-plugin-react-helmet": "^3.1.22",
-    "gatsby-plugin-robots-txt": "^1.5.5",
-    "gatsby-plugin-sharp": "^2.11.2",
-    "gatsby-plugin-sitemap": "^2.2.27",
+    "gatsby-plugin-image": "^2.25.0",
+    "gatsby-plugin-less": "^6.25.0",
+    "gatsby-plugin-manifest": "^4.25.0",
+    "gatsby-plugin-nprogress": "^4.25.0",
+    "gatsby-plugin-offline": "^5.25.0",
+    "gatsby-plugin-react-helmet": "^5.25.0",
+    "gatsby-plugin-robots-txt": "1.7.1",
+    "gatsby-plugin-sharp": "^4.25.0",
+    "gatsby-plugin-sitemap": "^5.25.0",
     "gatsby-remark-external-links": "0.0.4",
-    "gatsby-remark-images": "^3.1.44",
-    "gatsby-remark-prismjs": "^3.3.31",
-    "gatsby-source-filesystem": "^2.1.48",
-    "gatsby-transformer-remark": "^2.6.50",
-    "gatsby-transformer-sharp": "^2.4.2",
-    "less": "^3.11.1",
-    "moment": "^2.24.0",
-    "prismjs": "^1.19.0",
-    "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "gatsby-remark-images": "^6.25.0",
+    "gatsby-remark-prismjs": "^6.25.0",
+    "gatsby-source-filesystem": "^4.25.0",
+    "gatsby-transformer-remark": "^5.25.0",
+    "gatsby-transformer-sharp": "^4.25.0",
+    "less": "^4.2.0",
+    "moment": "^2.29.4",
+    "prismjs": "^1.29.0",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-fontawesome": "^1.7.1",
-    "react-helmet": "^5.2.1",
-    "react-pdf": "^4.1.0"
+    "react-helmet": "^6.1.0",
+    "react-pdf": "^6.2.2"
   },
   "devDependencies": {
     "@playwright/test": "^1.57.0",
