--- a/package.json
+++ b/package.json
@@ -11,12 +11,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "playwright test",
-    "test:headed": "playwright test --headed",
-    "test:ui": "playwright test --ui",
-    "test:debug": "playwright test --debug",
-    "test:chromium": "playwright test --project=chromium",
-    "test:report": "playwright show-report"
+    "test:e2e": "playwright test"
   },
   "dependencies": {
     "antd": "^4.24.0",
